# oculodoc

./: .gitignore  README.md  demo1_middle.json  implementation_plan.md  main.py  prd.md  pyproject.toml  setup_models.py
oculodoc/: __init__.py
oculodoc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
oculodoc/config/: __init__.py  loader.py  schema.py
oculodoc/errors/: __init__.py  exceptions.py
oculodoc/interfaces/: __init__.py  document_processor.py  layout_analyzer.py  vlm_analyzer.py
oculodoc/layout/: __init__.py  doclayout_yolo_analyzer.py  utils.py
oculodoc/processor/: __init__.py  base_processor.py  hybrid_processor.py
oculodoc/tests/: test_base_processor.py  test_config.py  test_document_processor_interface.py  test_errors.py  test_layout_analyzer_interface.py  test_vlm_analyzer_interface.py
oculodoc/utils/: __init__.py  reading_order.py
oculodoc/vlm/: __init__.py  sglang_ocrflux_analyzer.py
output/: index.html
scripts/: annotate.py  debug_layout.py  render_html_from_middle.py  view_regions.py
